--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -1,5 +1,6 @@
 # The HTTP endpoint for your Prisma API
-endpoint: ''
+#endpoint: ''
+endpoint: https://eu1.prisma.sh/tien-pham-c8784c/howtographql/dev
 
 # Points to the file that holds your data model
 datamodel: datamodel.graphql
