--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -2,8 +2,9 @@
 #endpoint: ''
 endpoint: https://eu1.prisma.sh/tien-pham-c8784c/howtographql/dev
 
-# Points to the file that holds your data model
 datamodel: datamodel.graphql
 
-# You can only access the API when providing JWTs that are signed with this secret
-secret: mysecret123
+# Deploy hook
+hooks:
+  post-deploy:
+    - graphql get-schema --project database
